Fixes an issue with z-index.

--- a/css/main.css
+++ b/css/main.css
@@ -1212,6 +1212,8 @@ tbody tr.total td, tbody tr.total th {
 	position: relative;
 	left: 374px;
 	top: 10px;
+
+	z-index: 10;
 }
 
 /*
